--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <nav>
+        <a href="#/">EN</a>
+        <a href="#/zh-cn/">中文</a>
+      </nav>
+    <div id="app">加载中</div>
 </body>
 <script src="//unpkg.com/docsify"></script>
 
